--- a/form-request.html
+++ b/form-request.html
@@ -81,8 +81,8 @@ button{
   <h2 id="header-text"></h2>
 
   <div id="info-text">
-    Silakan request jadwal sesuai keperluan.<br>
-    Data bisa direvisi selama periode masih dibuka.
+    Silakan Request Jadwal sesuai keperluan saja<br>
+    Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak!
   </div>
 
   <div id="loading">⏳ Memuat data...</div>
@@ -144,7 +144,8 @@ const monthNames=["Januari","Februari","Maret","April","Mei","Juni","Juli","Agus
   document.getElementById("header-text").textContent=`REQUEST LIBUR / CUTI BULAN ${m}`;
   document.getElementById("page-title").textContent=`REQUEST LIBUR / CUTI BULAN ${m}`;
   document.getElementById("footer-note").innerHTML=
-    `Kuota libur bulan <b>${m}</b>.<br>Tanggal penuh tidak bisa direquest.`;
+    `Kuota libur bulan <b>${m}</b>.<br> 8 Jika tidak lembur, Lembur=9. <br>
+    Jika kuota hari full/penuh tidak bisa direquest.`;
 })();
 
 /* ================= PARAM ================= */
@@ -267,5 +268,6 @@ requestForm.addEventListener("submit", async e => {
 </script>
 </body>
 </html>
+
 
 
