--- a/form-request.html
+++ b/form-request.html
@@ -267,36 +267,45 @@ function initPicker(id, full, raw){
 /* ================= SUBMIT ================= */
 requestForm.addEventListener("submit", async e=>{
   e.preventDefault();
-  status.textContent="⏳ Mengirim...";
-  status.className="";
 
-  if ((libur.value||"").split(",").filter(Boolean).length > MAX_LIBUR_USER){
-    status.textContent=`❌ Maksimal ${MAX_LIBUR_USER} tanggal libur`;
-    status.className="error";
+  status.textContent = "⏳ Mengirim...";
+  status.className = "";
+
+  const liburCount = (libur.value||"").split(",").filter(Boolean).length;
+  if (liburCount > MAX_LIBUR_USER){
+    status.textContent = `❌ Maksimal ${MAX_LIBUR_USER} tanggal libur`;
+    status.className = "error";
     return;
   }
 
   const fd = new FormData(requestForm);
-  fd.append("return","json");
+  fd.append("mode", "save");      // ✅ WAJIB
+  fd.append("return", "json");
 
   try{
-    const text = await (await fetch(GAS_URL,{method:"POST",body:fd})).text();
-    let j; try{ j = JSON.parse(text); }catch{}
-    if (j?.status==="success"){
-      status.textContent="✅ "+(j.message||"Berhasil");
-      status.className="success";
+    const res  = await fetch(GAS_URL, { method:"POST", body: fd });
+    const text = await res.text();
+
+    let json;
+    try{ json = JSON.parse(text); }catch{}
+
+    if (json?.status === "success"){
+      status.textContent = "✅ " + (json.message || "Data berhasil disimpan");
+      status.className = "success";
     } else {
-      status.textContent=j?.message?"❌ "+j.message:"✅ "+text;
-      status.className=j?.status==="success"?"success":"error";
+      status.textContent = json?.message ? "❌ " + json.message : "❌ " + text;
+      status.className = "error";
     }
-  }catch{
-    status.textContent="❌ Gagal mengirim data";
-    status.className="error";
+  }catch(err){
+    status.textContent = "❌ Gagal mengirim data";
+    status.className = "error";
+    console.error(err);
   }
 });
 </script>
 </body>
 </html>
+
 
 
 
