--- a/form-request.html
+++ b/form-request.html
@@ -268,6 +268,7 @@ function initPicker(id, full, raw){
 requestForm.addEventListener("submit", async e=>{
   e.preventDefault();
 
+  const status = document.getElementById("status");
   status.textContent = "⏳ Mengirim...";
   status.className = "";
 
@@ -279,7 +280,7 @@ requestForm.addEventListener("submit", async e=>{
   }
 
   const fd = new FormData(requestForm);
-  fd.append("mode", "save");      // ✅ WAJIB
+  fd.append("mode", "save");     // ✅ sesuai GAS
   fd.append("return", "json");
 
   try{
@@ -287,13 +288,15 @@ requestForm.addEventListener("submit", async e=>{
     const text = await res.text();
 
     let json;
-    try{ json = JSON.parse(text); }catch{}
+    try { json = JSON.parse(text); } catch {}
 
     if (json?.status === "success"){
       status.textContent = "✅ " + (json.message || "Data berhasil disimpan");
       status.className = "success";
     } else {
-      status.textContent = json?.message ? "❌ " + json.message : "❌ " + text;
+      status.textContent = json?.message
+        ? "❌ " + json.message
+        : "❌ " + text;
       status.className = "error";
     }
   }catch(err){
@@ -305,6 +308,7 @@ requestForm.addEventListener("submit", async e=>{
 </script>
 </body>
 </html>
+
 
 
 
