--- a/form-request.html
+++ b/form-request.html
@@ -77,7 +77,48 @@ button{
 .air-datepicker-cell.-selected-.weekend-red{
   color:#ffffff !important;
 }
+/* DOT BOUNCE LOADER */
+.dot-loader{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
 
+.dots{
+  display:flex;
+  gap:10px;
+}
+
+.dots span{
+  width:12px;
+  height:12px;
+  background:linear-gradient(135deg,#4e54c8,#8f94fb);
+  border-radius:50%;
+  animation:dotBounce 1.4s infinite ease-in-out both;
+}
+
+.dots span:nth-child(1){ animation-delay:0s; }
+.dots span:nth-child(2){ animation-delay:.2s; }
+.dots span:nth-child(3){ animation-delay:.4s; }
+
+@keyframes dotBounce{
+  0%,80%,100%{
+    transform:translateY(0);
+    opacity:.4;
+  }
+  40%{
+    transform:translateY(-10px);
+    opacity:1;
+  }
+}
+
+.loading-text{
+  margin-top:12px;
+  font-weight:600;
+  font-size:14px;
+  color:#4e54c8;
+}
 /* 🔴 SPECIAL HOLIDAY */
 .air-datepicker-cell.holiday-red{
   color:#cc0000 !important;
@@ -99,7 +140,14 @@ button{
     Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak!
   </div>
 
-  <div id="loading">⏳ Memuat data...</div>
+  <div id="loading" class="dot-loader">
+  <div class="dots">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="loading-text">Memuat data...</div>
+</div>
 
   <form id="requestForm" style="display:none;">
     <label>NIK</label>
@@ -320,6 +368,7 @@ requestForm.addEventListener("submit", async e=>{
 </script>
 </body>
 </html>
+
 
 
 
