--- a/form-request.html
+++ b/form-request.html
@@ -232,7 +232,19 @@ const monthNames = [
   "Januari","Februari","Maret","April","Mei","Juni",
   "Juli","Agustus","September","Oktober","November","Desember"
 ];
-
+/* ✅ TAMBAHKAN INI */
+const localeID = {
+  days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
+  daysShort: ['Min','Sen','Sel','Rab','Kam','Jum','Sab'],
+  daysMin: ['Mg','Sn','Sl','Rb','Km','Jm','Sb'],
+  months: monthNames,
+  monthsShort: ['Jan','Feb','Mar','Apr','Mei','Jun','Jul','Agu','Sep','Okt','Nov','Des'],
+  today: 'Hari ini',
+  clear: 'Bersihkan',
+  dateFormat: 'dd/MM/yyyy',
+  timeFormat: 'HH:mm',
+  firstDay: 0
+};
 /* ================= HEADER ================= */
 (function(){
   const now = new Date();
@@ -405,6 +417,7 @@ requestForm.addEventListener("submit", async e=>{
 </script>
 </body>
 </html>
+
 
 
 
